Modified ChangeLog. Changed all the <div class="code"> and <div
Modified ChangeLog.
Changed all the <div class="code"> and <div class="debug"> tags to <pre class=""> tags to fix the IE problems.

--- a/tutorials/Basic_Perl/index.html
+++ b/tutorials/Basic_Perl/index.html
@@ -41,7 +41,7 @@
   This tutorial will go into detail descriptions of the construction of a Gimp::Fu script, but before we do this, 
   here is the general framework of a Perl-Fu script.
 </p>
-<div class="code">
+<pre class="code">
 <br />
   #!/usr/local/bin/perl 
   use Gimp ":auto"; 
@@ -50,7 +50,7 @@
   register ... ;
   exit main();  # Handle over control to gimp 
   <br />
-</div>
+</pre>
 <p>
   The interesting items to note in the script is the use of the two modules Gimp and Gimp::Fu, 
   the register function, which will be described in detail below, and the way the control is handed over to Gimp module on line 9. 
@@ -70,7 +70,8 @@
   This browser provides a way of seeing all the functions in the PDB, as well as their input and output parameters. 
   E.g. the PDB Explorer entry for gimp_image_new, which will be used in the example below looks like this:
 </p>
-<p><table><tr><td bgcolor=#e0e0e0>
+<p>
+<table><tr><td bgcolor=#e0e0e0>
 <table>
 <tr><th valign=top align=right>Name:</th><td bgcolor=#e0e0ff colspan=3>gimp_image_new</td></tr>
 <tr><th valign=top align=right>Blurb:</th><td valign=top colspan=3>Creates a new Image with the specified with, height, and type</td></tr>
@@ -85,16 +86,19 @@
 </tr>
 <tr><th valign=top align=right>Out:</th></tr><tr><td></td><td valign=top>IMAGE</td><td valign=top>image</td><td valign=top>The ID of the newly created image</td>
 </tr>
-<tr><th valign=top valign=top>Help:</th><td colspan=3>Creates a new image, undisplayed with the specified extents and type. A layer should be created and added before this image is displayed, 
+<tr><th valign=top valign=top>Help:</th>
+<td colspan=3>Creates a new image, undisplayed with the specified extents and type. A layer should be created and added before this image is displayed, 
 or subsequent calls to 'gimp_display_new' with this image as an argument will fail. Layers can be created using the 'gimp_layer_new' commands. 
-They can be added to an image using the 'gimp_image_add_layer' command</td></tr></table>
-</table></p>
+They can be added to an image using the 'gimp_image_add_layer' command
+</td></tr></table>
+</table>
+</p>
 <p>
   All the the constants mentioned in the PDB Explorer have been defined within Gimp::Fu and may be used within perl. 
   E.g. I.e. a call to create a new image of size 100x150 of type RGB looks as follows:
 </p>
 
-<div class="code"><br />$img = gimp_image_new(100, 150, RGB)<br /></div>
+<pre class="code"><br />$img = gimp_image_new(100, 150, RGB)<br /></pre>
 
 <p>
   The PDB entry above shows that gimp_image_new is called with three parameters width, height, type. These are all of type INT32. This type and other types will be explained below.
@@ -208,7 +212,7 @@ They can be added to an image using the 'gimp_image_add_layer' command</td></tr>
   It registeres a script that takes two values, the size of the image and a color, and then produces an image of the requested size with the requested color. 
   Quite useless, but is shows the importent steps of how to register a script, how to create a new image, and how to access some PDB functions.
 </p>
-<div class="code">
+<pre class="code">
   #!/usr/local/bin/perl -w
   use Gimp ":auto";
   use Gimp::Fu;
@@ -243,7 +247,7 @@ They can be added to an image using the 'gimp_image_add_layer' command</td></tr>
         ],
         \&amp;img_uni;
   exit main();
-</div>
+</pre>
 <p>
   Most of these commands are directly copied out the PDB.
   <br /><br />
@@ -356,10 +360,10 @@ This procedure only affects regions within a selection if there is a selection a
 <th valign=top></th><td valign=top>FLOAT</td><td valign=top>y</td><td valign=top>y coordinate of upper-left corner of rectangle</td>
 </tr>
 <tr>
-<th valign=top></th><td valign=top>FLOAT</td><td valign=top>width</td><td valign=top>the width of the rectangle: width > 0</td>
+<th valign=top></th><td valign=top>FLOAT</td><td valign=top>width</td><td valign=top>the width of the rectangle: width &gt; 0</td>
 </tr>
 <tr>
-<th valign=top></th><td valign=top>FLOAT</td><td valign=top>height</td><td valign=top>the height of the rectangle: width > 0</td>
+<th valign=top></th><td valign=top>FLOAT</td><td valign=top>height</td><td valign=top>the height of the rectangle: width &gt; 0</td>
 </tr>
 
 <tr>
@@ -394,7 +398,7 @@ If the feather option is enabled, the resulting selection is blurred before comb
   In this case we don't want to display any new images and therefore return an empty array.</li>
 </ul>
 
-<div class="code">
+<pre class="code">
 #!/usr/local/bin/perl -w
 use Gimp ":auto";
 use Gimp::Fu;
@@ -424,7 +428,7 @@ register
    return ();
      };
 exit main();
-</div>
+</pre>
 <p class="images">
   <img src="paint-select.png" alt=""/>
 </p>
@@ -449,7 +453,7 @@ exit main();
   In perl it is trivial to write loops that together with the various selecton tools gives powerful creative possibilities. 
   Here is an example that mixes colors in circles. There is nothing really new here, but it shows the power of the what we have described above.
 </p>
-<div class="code">
+<pre class="code">
 #!/usr/local/bin/perl
 use Gimp ":auto";
 use Gimp::Fu;
@@ -491,7 +495,7 @@ register "circles", "a loop", "a loop", "Dov", "Dov", "1999-05-14",
     ],
     \&amp;circles;
 exit main();
-</div>
+</pre>
 <p class="images">
   <img src="circles.png" alt=""/>
 </p>
@@ -505,7 +509,7 @@ exit main();
   (There are also some older functions, gimp_text and gimp_text_ext in which the different X11 fields are specified explicitely.)
   Here is an example of a script that creates an image containing "Hello world".
 </p>
-<div class="code">
+<pre class="code">
 #!/usr/local/bin/perl
 use Gimp ":auto";
 use Gimp::Fu;
@@ -541,7 +545,7 @@ register "hello_world1", "basic text", "basic text", "Dov", "Dov",
     \&amp;text1;
 # Handle over control to gimp
 exit main();
-</div>
+</pre>
 <p class="images">
   <img src="hello-world1.png" alt=""/>
 </p>
@@ -567,7 +571,8 @@ exit main();
 <p>
   The result is an image composed of two layers; a transparent text layer on top of a uniform background.
 </p>
-<div class="code">
+
+<pre class="code">
 #!/usr/local/bin/perl
 use Gimp ":auto";
 use Gimp::Fu;
@@ -613,7 +618,7 @@ register "basic_logo", "basic logo", "basic logo",
     \&amp;basic_logo;
 # Handle over control to gimp
 exit main();
-</div>
+</pre>
 
 <p class="images">
   <img src="basic-logo-dialog.png" alt=""/>
@@ -640,7 +645,7 @@ exit main();
   This is illustrated in the following program, which works on one image and takes as a parameter an another image, 
   which it concatinates to the right of the first image. The lines 28-38 shows how the second image is copied and glued into the first image.
 </p>
-<div class="code">
+<pre class="code">
 #!/usr/local/bin/perl
 use Gimp qw( :auto );
 use Gimp::Fu;
@@ -687,7 +692,7 @@ register "horiz_cat", "Horizontal concat", "Horizontal Concat",
     \&amp;horiz_cat;
 # Handle over control to gimp
 exit main();
-</div>
+</pre>
 
 <div class="subtitle">9. The Perl Server and stand-alone scripts</div>
 <p>
