--- a/tutorials/Perlotine/index.html
+++ b/tutorials/Perlotine/index.html
@@ -76,7 +76,7 @@
   Below is the html that Perlotine generated. As I slice the smaller parts, this first html will be a base that the new tables should easily slide into.
   You can <kbd>shift-right-click</kbd> on the pieces to see how it worked.
 </p>
-<div class="code">
+<pre class="code">
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
         &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
@@ -90,7 +90,7 @@
         &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-4-0.png&quot; width=&quot;290&quot; height=&quot;50&quot;&gt;&lt;/td&gt;
     &lt;/tr&gt;
 &lt;/table&gt;
-</div>
+</pre>
 
 <table cellspacing=0 cellpadding=0 border=0>
 <tr>
@@ -102,7 +102,7 @@
 <p>
   This is the second slice. The dialog box has been put into its own element. By slicing it separately, I avoided slicing the image map.
 </p>
-<div class="code">
+<pre class="code">
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
         &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-0.png&quot; width=&quot;10&quot; height=&quot;21&quot;&gt;&lt;/td&gt;
@@ -110,7 +110,7 @@
         &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-2.png&quot; width=&quot;61&quot; height=&quot;21&quot;&gt;&lt;/td&gt;
     &lt;/tr&gt;
 &lt;/table&gt;
-</div>
+</pre>
 <table cellspacing=0 cellpadding=0 border=0>
  <tr>
    <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
@@ -140,7 +140,7 @@
   I am making all of the rest of the cuts in one step now. First the tweaked code for this table and then the completely chopped up table, 
   blown out to see the pieces and put back together again, so you can believe it. And that code. By then you should be able to do any sort of slicing you need.
 </p>
-<div class="code">
+<pre class="code">
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
         &lt;td colspan=&quot;3&quot;&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
@@ -159,7 +159,7 @@
         &lt;td colspan=&quot;3&quot;&gt;&lt;img alt=&quot; &quot; src=&quot;perlotine1/imap-table1-4-0.png&quot; width=&quot;290&quot; height=&quot;50&quot;&gt;&lt;/td&gt;
     &lt;/tr&gt;
 &lt;/table&gt;
-</div>
+</pre>
 <table cellspacing=0 cellpadding=0 border=0>
  <tr>
    <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
@@ -242,7 +242,7 @@
 </table>
 </td></tr></table>
 
-<div class="code">
+<pre class="code">
 <p>&lt;!--  Ugly ugly HTML (that works in mozilla)  --&gt;</p>
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
@@ -285,7 +285,7 @@
 &lt;/table&gt;&lt;/td&gt;
     &lt;/tr&gt;
 &lt;/table&gt;
-</div>
+</pre>
 
 <p>
   The original tutorial can be found <a href="http://carol.gimp.org/mygimp/tutorials/">here</a>.
