--- a/tutorials/Perlotine/nested.html
+++ b/tutorials/Perlotine/nested.html
@@ -28,7 +28,7 @@
   </tr>
 </table>
 
-<div class="code">
+<pre class="code">
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
         &lt;tr&gt;
                 &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
@@ -52,7 +52,7 @@
                 &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-4-0.png&quot; width=&quot;290&quot; height=&quot;50&quot;&gt;&lt;/td&gt;
         &lt;/tr&gt;
 &lt;/table&gt;
-</div>
+</pre>
 
 <p>
   The original tutorial can be found <a href="http://carol.gimp.org/mygimp/tutorials/">here</a>.
