Made the current-news show up on the main site index.html page.
The amount of text in the links in the contest/index.html page was increased.

Added the file BUGS to talk about known bugs.

--- a/programmatic/contest/index.html
+++ b/programmatic/contest/index.html
@@ -6,18 +6,17 @@
 </style>
 <div class="heading" style="z-index: 5;">Development GIMP Splash Contest</div>
 <div class="subtitle">A Contest Which Makes No Promises</div>
-
   <p>Welcome to the
   <a href="http://www.gimp.org">www.gimp.org</a>
-    splash image contest.
+  splash image contest.
   </p>
   <p>
-    From here you can
-    <a href="/contest/gallery.cgi?display=gallery">view</a>
-    the current splash image entries, or you may
-    <a href="/contest/contest.cgi">enter</a>
-    your own image into the contest to be considered as a candidate for a
-    "splash" image for some future version of the GIMP.  But, alas, no promises.
+   From here you can
+   <a href="/contest/gallery.cgi?display=gallery">view the current splash image entries</a>,
+   or you may
+  <a href="/contest/contest.cgi">enter your own image </a>
+   into the contest to be considered as a candidate for a
+  "splash" image for some future version of the GIMP.  But, alas, no promises.
   </p>
 <p>
   Do not forget: No promises. 
