Updated for the additional ChangeLogs

--- a/about/ChangeLogs/index.html
+++ b/about/ChangeLogs/index.html
@@ -10,6 +10,8 @@
 <a href="ChangeLog-gimp-unstable.txt">GIMP Unstable ChangeLog (most recent 100 lines)</a><br>
 <a href="ChangeLog-gegl-unstable.txt">GEGL Unstable ChangeLog (most recent 100 lines)</a><br>
 <a href="ChangeLog-gimp-help.txt">GIMP Help ChangeLog (most recent 100 lines)</a><br>
+<a href="ChangeLog-film-gimp.txt">FILM GIMP Help ChangeLog (most recent 100 lines)</a><br>
+<a href="ChangeLog-gimp-print.txt">GIMP Print ChangeLog (most recent 100 lines)</a><br>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
