--- a/programmatic/contest/index.html
+++ b/programmatic/contest/index.html
@@ -1,9 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Development GIMP Splash Contest</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
-<style type="text/css">
-</style>
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 <div class="heading" style="z-index: 5;">Development GIMP Splash Contest</div>
 <div class="subtitle">A Contest Which Makes No Promises</div>
   <p>Welcome to the
@@ -11,9 +9,9 @@
   splash image contest.
   </p>
   <p>
-   From here you can
-   <a href="/contest/gallery.cgi?display=gallery">view the current splash image entries</a>,
-   or you may
+  From here you can
+  <a href="/contest/gallery.cgi?display=gallery">view the current splash image entries</a>,
+  or you may
   <a href="/contest/contest.cgi">enter your own image </a>
    into the contest to be considered as a candidate for a
   "splash" image for some future version of the GIMP.  But, alas, no promises.
@@ -21,6 +19,5 @@
 <p>
   Do not forget: No promises. 
 </p>
-
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
