*** empty log message ***

--- a/programmatic/admin/index.html
+++ b/programmatic/admin/index.html
@@ -1,8 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>www.gimp.org - Site Administration</title>
-<link rel="stylesheet" title="News Administration" href="/admin/wgo-admin.css" type="text/css" media="screen">
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/admin-menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-admin-page-init.xhtml" -->
 <div class="heading">gimp.org Site Administration</div>
 <p>
   Welcome to the www.gimp.org web administration.  With this, you will
@@ -11,6 +10,5 @@
 <p>
   Currently, you can create, approve, and archive news items, and edit and delete entries from the <a href="/contest">image contest</a>.
 </p>
-
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
